=== HEAD

* Make Dataset#single_value work when graphing, which fixes count and paginate on graphed datasets (jeremyevans)

=== 2.4.0 (2008-08-06)

* Handle Java::JavaSql::Date type in the JDBC adapter (jeremyevans)

* Add support for read-only slave/writable master databases and database sharding (jeremyevans)

* Remove InvalidExpression, InvalidFilter, InvalidJoinType, and WorkerStop exceptions (jeremyevans)

* Add prepared statement/bound variable support (jeremyevans)

* Fix anonymous column names in the ADO adapter (nusco)

* Remove odbc_mssql adapter, use :db_type=>'mssql' option instead (jeremyevans)

* Split MSSQL specific syntax into separate file, usable by ADO and ODBC adapters (nusco, jeremyevans)

=== 2.3.0 (2008-07-25)

* Enable almost full support for MySQL using JDBC (jeremyevans)

* Fix ODBC adapter's conversion of ::ODBC::Time values (Michael Xavier)

* Enable full support for SQLite-JDBC using the JDBC adapter (jeremyevans)

* Minor changes to allow for full Ruby 1.9 compatibility (jeremyevans)

* Make Database#disconnect work for the ADO adapter (spicyj)

* Don't raise an exception in the ADO adapter if the dataset contains no records (nusco)

* Enable almost full support of PostgreSQL-JDBC using the JDBC adapter (jeremyevans)

* Remove Sequel::Worker (jeremyevans)

* Make PostgreSQL adapter not raise an error when inserting records into a table without a primary key (jeremyevans)

* Make Database.uri_to_options a private class method (jeremyevans)

* Make JDBC load drivers automatically for PostgreSQL, MySQL, SQLite, Oracle, and MSSQL (jeremyevans)

* Make Oracle adapter work with a nonstandard Oracle database port (pavel.lukin)

* Typecast '' to nil by default for non-string non-blob columns, add typecast_empty_string_to_nil= model class and instance methods (jeremyevans)

* Use a simpler select in Dataset#empty?, fixes use with MySQL (jeremyevans)
