@@ -1,5 +1,7 @@
 === HEAD
 
+* Allow before_save and before_update to affect the columns saved by save_changes (jeremyevans)
+
 * Make Dataset#single_value work when graphing, which fixes count and paginate on graphed datasets (jeremyevans)
 
 === 2.4.0 (2008-08-06)
